# iros2016

hangl_2016_iros/: .gitignore  CMakeLists.txt  package.xml
hangl_2016_iros/cfg/: haptic.prop  irosstat.prop  push.prop
hangl_2016_iros/experiment/data_with_labels/poke_database/: classRes  labels
hangl_2016_iros/experiment/data_with_labels/press_database/: classRes  labels
hangl_2016_iros/experiment/data_with_labels/slide_database/: classRes  labels
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_0/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_1/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_10/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_11/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_12/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_13/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_14/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_15/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_16/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_2/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_3/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_4/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_5/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_6/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_7/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_8/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_0_sample_9/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_0/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_1/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_10/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_11/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_12/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_13/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_14/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_15/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_16/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_17/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_2/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_right_1
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_3/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_4/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/data_with_labels/slide_database/class_1_sample_5/: kuka_lwr_real_left_arm_0  kuka_lwr_real_right_arm_1  schunk_left_0
hangl_2016_iros/experiment/movements/push_fin/: kuka_lwr_real_left_arm_0  kuka_lwr_real_left_arm_0_new_copy
hangl_2016_iros/experiment/movements/push_forward/: kuka_lwr_real_right_arm_0
hangl_2016_iros/src/: iros2016.cpp  iros2016statistics.cpp
hangl_2016_iros/src/controllers/: FlipVertical.cpp  FlipVertical.hpp  NothingController.cpp  NothingController.hpp  PeelController.cpp  PeelController.hpp  PokeSensingController.cpp  PokeSensingController.hpp  PressSensingController.cpp  PressSensingController.hpp  SlideSensingController.cpp  SlideSensingController.hpp  discretepush.cpp  discretepush.hpp
hangl_pushing_rect/: .gitignore  CMakeLists.txt  package.xml
hangl_pushing_rect/include/hangl_pushing_rect/: FinalPush.hpp  pushforwardcontroller.hpp  pushingrotcontroller.hpp  pushingtranscontroller.hpp  utils.hpp
hangl_pushing_rect/src/: FinalPush.cpp  push.cpp  pushforwardcontroller.cpp  pushingrotcontroller.cpp  pushingtranscontroller.cpp  utils.cpp
kukadu/src/manipulation/: sensingcontroller.cpp
(+112 files in other folders)
