<?xml version="1.0"?>
<package>
  <name>hangl_pushing_rect</name>
  <version>0.0.0</version>
  <description>The hangl-pushing-rect package</description>

  <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kukadu</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>iis_robot_dep</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>iis_fast_ik</build_depend>
  <build_depend>iis_robot</build_depend>
  <build_depend>lwr_description</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>uibk_planning_node</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>iis_vrep</build_depend>
  <build_depend>hangl_vision</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>kukadu</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>iis_robot_dep</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>iis_fast_ik</run_depend>
  <run_depend>iis_robot</run_depend>
  <run_depend>lwr_description</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>uibk_planning_node</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>iis_vrep</run_depend>
  <run_depend>hangl_vision</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
